<resources>
    <string name="app_name">saamdagen</string>
    <string name="title_activity_main">Saamdagen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_info">Info</string>
    <string name="practical_title">Praktisch</string>
    <string name="about_title">Over</string>
    <string name="settings_title">Instellingen</string>
    <string name="title_schedule">Agenda</string>
    <string name="title_map">Grondplan</string>
    <string name="google_maps_key">AIzaSyAuZFY7D6us8svwlTAmwduUBie2LiQIlfA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_banner">Saamdagen banner</string>
    <string name="text_my_saamdagen">Mijn Saamdagen</string>
    <string name="news_saved_events">Opgeslagen gebeurtenissen</string>
    <string name="news_show_all_events">Alles weergeven</string>
    <string name="news_no_saved_events">Je hebt nog geen gebeurtenissen opgeslaan</string>
    <string name="agenda_duration" translatable="false">%1$s %2$s</string>
    <string name="title_activities">Activiteiten</string>
    <string name="star">Ster</string>
    <string name="card_content_image_contentDescription">Info afbeelding</string>
    <string name="navigate_up">Terug navigeren</string>
    <string name="home_title_welcome">Welkom op Saamdagen!</string>
    <string name="instellingen">Instellingen</string>
    <string name="open_source_licences">Open source licenties</string>

    <string name="oss_file" translatable="false">file:///android_asset/licenses.html</string>
    <string name="map_layer_normal">Normaal</string>
    <string name="map_layer_activities">Activiteiten</string>
    <string name="map_select_mode">Kaart modus selecteren</string>
    <string name="search_session">Sessie zoeken</string>
    <string name="input_search_session">Geef hier je voornaam en familienaam (in die volgorde)</string>
    <string name="session_your_sessions">Je sessies</string>
</resources>
