<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/ic_nav_info"
            android:title="@string/title_info"/>

    <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/ic_nav_agenda"
            android:title="@string/title_schedule"/>

    <item
    android:id="@+id/navigation_session"
    android:icon="@drawable/ic_activity"
    android:title="@string/title_activities"/>

    <item
            android:id="@+id/navigation_map"
            android:icon="@drawable/ic_nav_map"
            android:title="@string/title_map"/>

</menu>
