<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                style="@style/Widget.AppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:gravity="center"
                    android:text="@string/title_home"
                    android:textAppearance="@style/TextAppearance.Saamdagen.ToolbarTitle"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"/>


        </com.google.android.material.appbar.AppBarLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:srcCompat="@drawable/banner2"
                android:id="@+id/imageView"
                tools:srcCompat="@drawable/banner2"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/content_description_banner"/>
        <TextView
                android:text="@string/news_saved_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.Saamdagen.Overline"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>
        <TextView
                android:text="@string/news_no_saved_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="395dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"/>

        <Button
                android:id="@+id/actionButton"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_show_all_events"
                tools:text="Alles weergeven"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
